@@ -18,26 +18,22 @@ package org.axonframework.messaging.eventhandling.deadletter.jdbc;
 
 import org.axonframework.common.IdentifierFactory;
 import org.axonframework.common.jdbc.JdbcException;
-import org.axonframework.messaging.core.unitofwork.transaction.Transaction;
-import org.axonframework.messaging.core.unitofwork.transaction.TransactionManager;
-import org.axonframework.messaging.eventhandling.deadletter.jdbc.PagingJdbcIterable;
+import org.axonframework.messaging.core.unitofwork.transaction.TransactionalExecutorProvider;
+import org.axonframework.messaging.core.unitofwork.transaction.jdbc.JdbcTransactionalExecutorProvider;
 import org.hsqldb.jdbc.JDBCDataSource;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.*;
-import org.springframework.jdbc.datasource.DataSourceTransactionManager;
-import org.springframework.transaction.PlatformTransactionManager;
-import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
+import javax.sql.DataSource;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.StreamSupport;
-import javax.sql.DataSource;
 
+import static org.axonframework.common.FutureUtils.joinAndUnwrap;
 import static org.axonframework.common.jdbc.JdbcUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -49,50 +45,19 @@ import static org.junit.jupiter.api.Assertions.*;
 @SuppressWarnings({"SqlDialectInspection", "SqlNoDataSourceInspection"})
 class PagingJdbcIterableTest {
 
-    private DataSource dataSource;
-    private TransactionManager transactionManager;
+    private TransactionalExecutorProvider<Connection> executorProvider;
     private PagingJdbcIterable<String> testSubject;
 
     @BeforeEach
     void setUp() {
-        dataSource = dataSource();
-        transactionManager = transactionManager(dataSource);
-        transactionManager.executeInTransaction(() -> {
-            Connection connection = null;
-            try {
-                connection = dataSource.getConnection();
-                executeUpdates(
-                        connection,
-                        e -> {
-                            throw new JdbcException("Enable to prepare test_table", e);
-                        },
-                        c -> c.prepareStatement("DROP TABLE IF EXISTS test_table"),
-                        c -> c.prepareStatement(
-                                "CREATE TABLE IF NOT EXISTS test_table ("
-                                        + "identifier VARCHAR(255) NOT NULL,"
-                                        + "idIndex BIGINT NOT NULL"
-                                        + ")"
-                        )
-                );
-            } catch (SQLException e) {
-                throw new IllegalStateException("Enable to retrieve a Connection to prepare the test_table", e);
-            } finally {
-                closeQuietly(connection);
-            }
-        });
-
+        var dataSource = dataSource();
+        recreateTestTable(dataSource);
+        executorProvider = new JdbcTransactionalExecutorProvider(dataSource);
         testSubject = new PagingJdbcIterable<>(
-                transactionManager,
-                () -> {
-                    try {
-                        return dataSource.getConnection();
-                    } catch (SQLException e) {
-                        throw new RuntimeException(e);
-                    }
-                },
-                (connection, offset, maxSize) -> {
+                executorProvider.getTransactionalExecutor(null),
+                (conn, offset, maxSize) -> {
                     String sql = "SELECT * FROM test_table WHERE idIndex >=? LIMIT ?";
-                    PreparedStatement statement = connection.prepareStatement(sql);
+                    PreparedStatement statement = conn.prepareStatement(sql);
                     statement.setLong(1, offset);
                     statement.setLong(2, maxSize);
                     return statement;
@@ -103,31 +68,37 @@ class PagingJdbcIterableTest {
         );
     }
 
-    private DataSource dataSource() {
+    private static void recreateTestTable(DataSource dataSource) {
+        Connection connection = null;
+        try {
+            connection = dataSource.getConnection();
+            executeUpdates(
+                    connection,
+                    e -> {
+                        throw new JdbcException("Unable to prepare test_table", e);
+                    },
+                    c -> c.prepareStatement("DROP TABLE IF EXISTS test_table"),
+                    c -> c.prepareStatement(
+                            "CREATE TABLE IF NOT EXISTS test_table ("
+                                    + "identifier VARCHAR(255) NOT NULL,"
+                                    + "idIndex BIGINT NOT NULL"
+                                    + ")"
+                    )
+            );
+        } catch (SQLException e) {
+            throw new IllegalStateException("Unable to retrieve a Connection to prepare the test_table", e);
+        } finally {
+            closeQuietly(connection);
+        }
+    }
+
+    @NonNull
+    private static JDBCDataSource dataSource() {
         JDBCDataSource dataSource = new JDBCDataSource();
-        dataSource.setUrl("jdbc:hsqldb:mem:axontest");
+        dataSource.setUrl("jdbc:hsqldb:mem:" + PagingJdbcIterableTest.class.getSimpleName());
         dataSource.setUser("sa");
         dataSource.setPassword("");
         return dataSource;
-    }
-
-    private TransactionManager transactionManager(DataSource dataSource) {
-        PlatformTransactionManager platformTransactionManager = new DataSourceTransactionManager(dataSource);
-        return () -> {
-            TransactionStatus transaction =
-                    platformTransactionManager.getTransaction(new DefaultTransactionDefinition());
-            return new Transaction() {
-                @Override
-                public void commit() {
-                    platformTransactionManager.commit(transaction);
-                }
-
-                @Override
-                public void rollback() {
-                    platformTransactionManager.rollback(transaction);
-                }
-            };
-        };
     }
 
     @Test
@@ -136,7 +107,7 @@ class PagingJdbcIterableTest {
         addEntryAt(testId, 1);
 
         List<String> result = StreamSupport.stream(testSubject.spliterator(), false)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
         assertEquals(1, result.size());
         assertEquals(testId, result.get(0));
@@ -146,44 +117,32 @@ class PagingJdbcIterableTest {
     void queriesMultiplePages() {
         List<String> expectedIds = IntStream.range(0, 102)
                                             .mapToObj(String::valueOf)
-                                            .collect(Collectors.toList());
+                                            .toList();
         expectedIds.forEach(expectedId -> addEntryAt(expectedId, Long.parseLong(expectedId)));
 
         List<String> result = StreamSupport.stream(testSubject.spliterator(), false)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
         assertEquals(expectedIds.size(), result.size());
         expectedIds.forEach(resultId -> assertTrue(result.contains(resultId)));
     }
 
-    private void addEntryAt(String id, long index) {
-        transactionManager.executeInTransaction(() -> {
-            Connection connection = null;
-            try {
-                connection = dataSource.getConnection();
-                executeUpdate(
-                        connection,
-                        c -> {
-                            String sql = "INSERT INTO test_table (identifier, idIndex) VALUES(?,?)";
-                            PreparedStatement statement = c.prepareStatement(sql);
-                            statement.setString(1, id);
-                            statement.setLong(2, index);
-                            return statement;
-                        },
-                        e -> new JdbcException("Enable to insert entry [" + id + "] at index [" + index + "]", e)
-                );
-            } catch (SQLException e) {
-                throw new IllegalStateException(
-                        "Enable to retrieve a Connection to insert entry [" + id + "] at index [" + index + "]", e
-                );
-            } finally {
-                closeQuietly(connection);
-            }
-        });
-    }
-
     @Test
     void throwsExceptionWhenNoItemPresent() {
         assertThrows(NoSuchElementException.class, testSubject.iterator()::next);
+    }
+
+    private void addEntryAt(String id, long index) {
+        joinAndUnwrap(executorProvider.getTransactionalExecutor(null).accept(conn -> executeUpdate(
+                conn,
+                c -> {
+                    String sql = "INSERT INTO test_table (identifier, idIndex) VALUES(?,?)";
+                    PreparedStatement statement = c.prepareStatement(sql);
+                    statement.setString(1, id);
+                    statement.setLong(2, index);
+                    return statement;
+                },
+                e -> new JdbcException("Unable to insert entry [" + id + "] at index [" + index + "]", e)
+        )));
     }
 }
